# researcher-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: HF_zimage_clean_download.txt  TODO.md
src/researcher/: auth.py  config.py  crew.py  image.py  ingestion.py  introspect.py  main.py  postprocess.py  tools.py  tts.py  upsonicai.py
src/researcher/composer/: __init__.py  crew.py  models.py  musicxml_builder.py  musicxml_fix.py  storage.py  tools.py
src/researcher/composer/config/: agents.yaml  tasks.yaml
src/researcher/composer/knowledge/: genres.yaml  loader.py  theory.yaml
src/researcher/config/: agents.yaml  tasks.yaml
src/researcher/routes/: __init__.py  ask.py  chat.py  composer.py  models.py  proxy.py  sessions.py  speech.py  tutor.py
src/researcher/static/: chat-direct.html  composer.html  index.html  tutor.html
src/researcher/static/css/: composer.css  main.css  tutor.css
src/researcher/static/js/: app.js  audio.js  auth.js  chat.js  composer-chat.js  composer-score.js  composer-sessions.js  composer-state.js  export.js  files.js  messages.js  models.js  page-settings.js  sessions.js  settings.js  state.js  tts.js  tutor-chat.js  tutor-lessons.js  tutor-quiz.js  tutor-sessions.js  tutor-state.js  tutor-stats.js  tutor-translate.js  tutor-vocab.js  utils.js
src/researcher/tutor/: __init__.py  crew.py  models.py  storage.py  tools.py
src/researcher/tutor/config/: agents.yaml  tasks.yaml
tests/: conftest.py  preload_image_models.sh  test_api.py  test_attachments.py  test_crew.py  test_memory.py  test_musicxml_builder.py  test_musicxml_fix.py  test_postprocess.py  test_sdimage.py  test_tiling.py  test_tts_lang.py  test_tutor.py  test_upsonicai.py  test_utils.py  test_zimage.py
