[project]
name = "researcher-agent"
version = "2.0.0"
dependencies = [
    "crewai[tools]>=1.14.1",
    "litellm",
    "ollama",
    "ddgs",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "langchain-community",
    "httpx",
    "Pillow",
    "diffusers",
    "transformers",
    "accelerate",
    "safetensors",
    "aiosqlite",
    "openai-whisper",
    "edge-tts",
    "langdetect",
    "bcrypt",
    "PyJWT",
    "pymupdf",
    "python-docx",
    "openpyxl",
    "pytest", 
    "pytest-asyncio",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires running server (use --integration to run)",
]